Attempting to fix watch on mobile

--- a/styles/revengeMobile.css
+++ b/styles/revengeMobile.css
@@ -94,13 +94,13 @@ body {
         padding: 5px;
     }
 
-    /*main ul {*/
-    /*    text-align: right;*/
-    /*    background-color: rgba(0, 0, 0, 25%);*/
-    /*    width: fit-content;*/
-    /*    border-radius: 15px;*/
-    /*    padding: 8px;*/
-    /*}*/
+    main ul {
+        /*list-style-type: none;*/
+        text-align: left;
+        padding: 0;
+        width: auto;
+        max-width: 10000000px;
+    }
 
     p {
         padding: 15px;
